# vision-cooking-assistant-ms-thesis

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md
.cargo/: config
src/: auditio.rs  core.rs  debug.rs  lib.rs  logic.rs  main.rs  visio.rs
src/schema/: query.capnp
src/smart_speaker/: mod.rs
src/smart_speaker/actors/: audio_actor.rs  audio_actor_tests.rs  camera_actor.rs  camera_actor_tests.rs  context_actor.rs  core_actor.rs  core_actor_tests.rs  gaze_actor.rs  logger_actor.rs  machine_speech_actor.rs  mod.rs  query_actor.rs  speech_to_intent_actor.rs  stream_actor.rs  subtask_actor.rs  vision_actor.rs  vision_actor_tests.rs  voice_activity_detect_actor.rs  wake_word_actor.rs
src/smart_speaker/controllers/: camera_controller.rs  camera_controller_tests.rs  debug_controller.rs  gaze_controller.rs  intent_controller.rs  mic_controller.rs  mic_controller_tests.rs  mod.rs  vision_controller.rs
src/smart_speaker/models/: context_model.rs  core_model.rs  debug_model.rs  gaze_model.rs  intent_model.rs  marker_model.rs  message_model.rs  mic_model.rs  mod.rs  speak_model.rs  vision_model.rs
src/smart_speaker/models/revision_model/: cooking_revision.rs  mod.rs
src/smart_speaker/models/step_model/: cooking_step.rs  generic_step.rs  mod.rs
src/smart_speaker/models/task_model/: cooking_task.rs  mod.rs  viewing_task.rs  vision_cooking_task.rs  vision_viewing_task.rs
src/utils/: camera_util.rs  config_util.rs  config_util_tests.rs  marker_util.rs  message_util.rs  message_util_tests.rs  mod.rs  pupil_util.rs  query_util.rs  vision_util.rs
