[package]
name = "VAs-got-vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
opencv = { version = "0.82.1", default-features = true }
rgb = "0.8.23"
#linfa = "0.6.0"
zmq = "0.10.0"
#serde = { version = "1.0.150", features = ["derive"] }
#serde_yaml = "0.9.14"
capnp = "0.17.0"
#rayon = "1.7.0"
pv_cobra = "=1.1.4"
pv_rhino = "=2.1.8"
pv_cheetah = "=1.1.0"
pv_recorder = "=1.1.0"
pv_porcupine = "=2.1.8"
bounded-vec-deque = "0.1.1"
#crossbeam = "0.8.2"
#crossbeam-queue = "0.3.8"
#crossbeam-deque = "0.8.2"
#crossbeam-channel = "0.5.6"
#crossbeam-utils = "0.8.14"

[build-dependencies]
capnpc = "0.17.1"
