[package]
name = "vas-got-vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
opencv = { version = "0.86.1", default-features = true }
rgb = "0.8.23"
zmq = "0.10.0"
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_derive = "1.0.163"
#serde_yaml = "0.9.14"
#capnp = "0.17.0"
#capnp-rpc = "0.17.0"
#rayon = "1.7.0"
pv_cobra = "=1.1.4"
pv_rhino = "=2.2.0"
pv_cheetah = "=1.1.0"
pv_recorder = "=1.1.0"
pv_porcupine = "=2.2.0"
bounded-vec-deque = "0.1.1"
#gstreamer = "0.20.5"
#crossbeam = "0.8.2"
#crossbeam-queue = "0.3.8"
#crossbeam-deque = "0.8.2"
#crossbeam-channel = "0.5.6"
#crossbeam-utils = "0.8.14"
tts = "0.25.5"
cocoa-foundation = "0.1.1"
objc = "0.2.7"
device_query = "1.1.3"
log = "0.4.18"
log4rs = "1.2.0"
chrono = "0.4.31"

#[build-dependencies]
#capnpc = "0.17.1"
